# Lab_Second

./: CMakeLists.txt  Test.txt  Watch_Demo_Watch_Demo.cpp  functions.cpp  functions.h  main.cpp
tests/: test_functions.cpp
